[gd_scene load_steps=8 format=4 uid="uid://bv17dcmmusviu"]

[ext_resource type="Texture2D" uid="uid://d2vqhvvo7uj5r" path="res://Images/noise.png" id="1_0xm2m"]
[ext_resource type="Script" uid="uid://c8mc4e8avl3my" path="res://Scripts/main.gd" id="1_h2yge"]
[ext_resource type="Script" uid="uid://dby0200jfnm0d" path="res://Scripts/texture_rect.gd" id="1_ig7tw"]
[ext_resource type="Texture2D" uid="uid://bhotuvxruockp" path="res://Images/tile atlas.png" id="4_1bvp3"]
[ext_resource type="Script" uid="uid://3bibfvgief0" path="res://Scripts/tilemap.gd" id="5_lquwl"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_lquwl"]
texture = ExtResource("4_1bvp3")
0:0/0 = 0
3:0/0 = 0

[sub_resource type="TileSet" id="TileSet_7mycd"]
tile_size = Vector2i(15, 15)
sources/0 = SubResource("TileSetAtlasSource_lquwl")

[node name="main" type="Node2D"]
script = ExtResource("1_h2yge")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="TextureRect" type="TextureRect" parent="CanvasLayer"]
texture_filter = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -600.0
offset_top = -300.0
offset_bottom = 300.0
grow_horizontal = 0
grow_vertical = 2
texture = ExtResource("1_0xm2m")
script = ExtResource("1_ig7tw")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_right = 40.0
offset_bottom = 40.0

[node name="Size" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/Size"]
layout_mode = 2
text = "Size"

[node name="size_input" type="LineEdit" parent="VBoxContainer/Size"]
layout_mode = 2
text = "600"

[node name="new_image" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Submit Size"

[node name="change_running" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Run"

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = " v Simulation Speed v"

[node name="sim_speed" type="HSlider" parent="VBoxContainer"]
layout_mode = 2
min_value = 0.01
max_value = 1.0
step = 0.01
value = 0.5

[node name="save_shader" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Save neighbourhood"

[node name="shader_dropdown" type="OptionButton" parent="VBoxContainer"]
layout_mode = 2

[node name="TileMapLayer" type="TileMapLayer" parent="."]
position = Vector2(300, 500)
tile_map_data = PackedByteArray("AAD/////AAAAAAAAAAD+////AAAAAAAAAAAAAP//AAAAAAAAAAD9////AAAAAAAAAAABAP//AAAAAAAAAAD8////AAAAAAAAAAACAP//AAAAAAAAAAD7////AAAAAAAAAAADAP//AAAAAAAAAAD6////AAAAAAAAAAAEAP//AAAAAAAAAAD5////AAAAAAAAAAAFAP//AAAAAAAAAAAGAP//AAAAAAAAAAD///7/AAAAAAAAAAD//wAAAAAAAAAAAAD///3/AAAAAAAAAAD//wEAAAAAAAAAAAD//wIAAAAAAAAAAAAAAP3/AAAAAAAAAAAAAPz/AAAAAAAAAAD///z/AAAAAAAAAAD///v/AAAAAAAAAAD//wMAAAAAAAAAAAD//wQAAAAAAAAAAAD///r/AAAAAAAAAAD///n/AAAAAAAAAAD//wUAAAAAAAAAAAD//wYAAAAAAAAAAAD5/wYAAAAAAAAAAAD6/wYAAAAAAAAAAAD7/wYAAAAAAAAAAAD8/wYAAAAAAAAAAAD9/wYAAAAAAAAAAAD+/wYAAAAAAAAAAAAAAAYAAAAAAAAAAAABAAYAAAAAAAAAAAACAAYAAAAAAAAAAAADAAYAAAAAAAAAAAAEAAYAAAAAAAAAAAAFAAYAAAAAAAAAAAAGAAYAAAAAAAAAAAAGAAUAAAAAAAAAAAAGAAQAAAAAAAAAAAAGAAMAAAAAAAAAAAAGAAIAAAAAAAAAAAAGAAEAAAAAAAAAAAAGAAAAAAAAAAAAAAAGAP7/AAAAAAAAAAAGAP3/AAAAAAAAAAAGAPz/AAAAAAAAAAAGAPv/AAAAAAAAAAAGAPr/AAAAAAAAAAAGAPn/AAAAAAAAAAD5//n/AAAAAAAAAAD6//n/AAAAAAAAAAD7//n/AAAAAAAAAAD8//n/AAAAAAAAAAD9//n/AAAAAAAAAAD+//n/AAAAAAAAAAAAAPn/AAAAAAAAAAABAPn/AAAAAAAAAAACAPn/AAAAAAAAAAADAPn/AAAAAAAAAAAEAPn/AAAAAAAAAAAFAPn/AAAAAAAAAAAFAPr/AAAAAAAAAAAEAPr/AAAAAAAAAAADAPr/AAAAAAAAAAACAPr/AAAAAAAAAAABAPr/AAAAAAAAAAAAAPr/AAAAAAAAAAD+//r/AAAAAAAAAAD9//r/AAAAAAAAAAD8//r/AAAAAAAAAAD7//r/AAAAAAAAAAD6//r/AAAAAAAAAAD5//r/AAAAAAAAAAD5//v/AAAAAAAAAAD6//v/AAAAAAAAAAD7//v/AAAAAAAAAAD8//v/AAAAAAAAAAD9//v/AAAAAAAAAAD+//v/AAAAAAAAAAAAAPv/AAAAAAAAAAABAPv/AAAAAAAAAAACAPv/AAAAAAAAAAADAPv/AAAAAAAAAAAEAPv/AAAAAAAAAAAFAPv/AAAAAAAAAAAFAPz/AAAAAAAAAAAEAPz/AAAAAAAAAAADAPz/AAAAAAAAAAACAPz/AAAAAAAAAAABAPz/AAAAAAAAAAD+//z/AAAAAAAAAAD9//z/AAAAAAAAAAD8//z/AAAAAAAAAAD7//z/AAAAAAAAAAD6//z/AAAAAAAAAAD5//z/AAAAAAAAAAD5//3/AAAAAAAAAAD6//3/AAAAAAAAAAD7//3/AAAAAAAAAAD8//3/AAAAAAAAAAD9//3/AAAAAAAAAAD+//3/AAAAAAAAAAABAP3/AAAAAAAAAAACAP3/AAAAAAAAAAADAP3/AAAAAAAAAAAEAP3/AAAAAAAAAAAFAP3/AAAAAAAAAAAFAP7/AAAAAAAAAAAEAP7/AAAAAAAAAAADAP7/AAAAAAAAAAACAP7/AAAAAAAAAAABAP7/AAAAAAAAAAAAAP7/AAAAAAAAAAD+//7/AAAAAAAAAAD9//7/AAAAAAAAAAD8//7/AAAAAAAAAAD7//7/AAAAAAAAAAD6//7/AAAAAAAAAAD5//7/AAAAAAAAAAD5/wAAAAAAAAAAAAD6/wAAAAAAAAAAAAD7/wAAAAAAAAAAAAD8/wAAAAAAAAAAAAD9/wAAAAAAAAAAAAD+/wAAAAAAAAAAAAABAAAAAAAAAAAAAAACAAAAAAAAAAAAAAADAAAAAAAAAAAAAAAEAAAAAAAAAAAAAAAFAAAAAAAAAAAAAAAFAAEAAAAAAAAAAAAEAAEAAAAAAAAAAAADAAEAAAAAAAAAAAACAAEAAAAAAAAAAAABAAEAAAAAAAAAAAAAAAEAAAAAAAAAAAD+/wEAAAAAAAAAAAD9/wEAAAAAAAAAAAD8/wEAAAAAAAAAAAD7/wEAAAAAAAAAAAD6/wEAAAAAAAAAAAD5/wEAAAAAAAAAAAD5/wIAAAAAAAAAAAD6/wIAAAAAAAAAAAD7/wIAAAAAAAAAAAD8/wIAAAAAAAAAAAD9/wIAAAAAAAAAAAD+/wIAAAAAAAAAAAAAAAIAAAAAAAAAAAABAAIAAAAAAAAAAAACAAIAAAAAAAAAAAADAAIAAAAAAAAAAAAEAAIAAAAAAAAAAAAFAAIAAAAAAAAAAAAFAAMAAAAAAAAAAAAEAAMAAAAAAAAAAAADAAMAAAAAAAAAAAACAAMAAAAAAAAAAAABAAMAAAAAAAAAAAAAAAMAAAAAAAAAAAD+/wMAAAAAAAAAAAD9/wMAAAAAAAAAAAD8/wMAAAAAAAAAAAD7/wMAAAAAAAAAAAD6/wMAAAAAAAAAAAD5/wMAAAAAAAAAAAD5/wQAAAAAAAAAAAD6/wQAAAAAAAAAAAD7/wQAAAAAAAAAAAD8/wQAAAAAAAAAAAD9/wQAAAAAAAAAAAD+/wQAAAAAAAAAAAAAAAQAAAAAAAAAAAABAAQAAAAAAAAAAAACAAQAAAAAAAAAAAADAAQAAAAAAAAAAAAEAAQAAAAAAAAAAAAFAAQAAAAAAAAAAAAFAAUAAAAAAAAAAAAEAAUAAAAAAAAAAAADAAUAAAAAAAAAAAACAAUAAAAAAAAAAAABAAUAAAAAAAAAAAAAAAUAAAAAAAAAAAD+/wUAAAAAAAAAAAD9/wUAAAAAAAAAAAD8/wUAAAAAAAAAAAD7/wUAAAAAAAAAAAD6/wUAAAAAAAAAAAD5/wUAAAAAAAAAAAAHAPn/AAAAAAAAAAAHAPr/AAAAAAAAAAAHAPv/AAAAAAAAAAAHAPz/AAAAAAAAAAAHAP3/AAAAAAAAAAAHAP7/AAAAAAAAAAAHAP//AAAAAAAAAAAHAAAAAAAAAAAAAAAHAAEAAAAAAAAAAAAHAAIAAAAAAAAAAAAHAAMAAAAAAAAAAAAHAAQAAAAAAAAAAAAHAAUAAAAAAAAAAAAHAAYAAAAAAAAAAAD5/wcAAAAAAAAAAAD6/wcAAAAAAAAAAAD7/wcAAAAAAAAAAAD8/wcAAAAAAAAAAAD9/wcAAAAAAAAAAAD+/wcAAAAAAAAAAAD//wcAAAAAAAAAAAAAAAcAAAAAAAAAAAABAAcAAAAAAAAAAAACAAcAAAAAAAAAAAADAAcAAAAAAAAAAAAEAAcAAAAAAAAAAAAFAAcAAAAAAAAAAAAGAAcAAAAAAAAAAAAHAAcAAAAAAAAAAAA=")
tile_set = SubResource("TileSet_7mycd")
script = ExtResource("5_lquwl")

[connection signal="text_changed" from="VBoxContainer/Size/size_input" to="." method="_new_size"]
[connection signal="pressed" from="VBoxContainer/new_image" to="." method="_generate_new_texture"]
[connection signal="pressed" from="VBoxContainer/change_running" to="." method="_change_run_mode"]
[connection signal="drag_ended" from="VBoxContainer/sim_speed" to="." method="_on_sim_speed_drag_ended"]
[connection signal="pressed" from="VBoxContainer/save_shader" to="TileMapLayer" method="_save_shader"]
[connection signal="item_selected" from="VBoxContainer/shader_dropdown" to="." method="_on_shader_dropdown_item_selected"]
